# bouffalo_template

./: CMakeLists.txt  Makefile  README.md  a  flash_prog_cfg.ini  main.c  main.c.md  proj.conf  proj.conf.txt  toolchain.cmake
drivers/: audio_driver.c  audio_driver.h  ble_driver.c  ble_driver.h  led_driver.c  led_driver.h  pwm_driver.c  pwm_driver.h  stepper_motor.c  stepper_motor.h  wifi_driver.h
firmware/dev_ws/: ros2.repos
firmware/dev_ws/install/: local_setup.sh  setup.sh
firmware/dev_ws/log/: latest_build
firmware/mcu_ws/: ros2.repos
firmware/mcu_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
firmware/mcu_ws/install/lib/tracetools_trace/: trace
firmware/mcu_ws/install/share/action_msgs/: package.sh
firmware/mcu_ws/install/share/actionlib_msgs/: local_setup.sh  package.sh
firmware/mcu_ws/install/share/builtin_interfaces/: local_setup.sh  package.sh
firmware/mcu_ws/install/share/common_interfaces/: package.sh
firmware/mcu_ws/install/share/composition_interfaces/: local_setup.sh  package.sh
firmware/mcu_ws/install/share/diagnostic_msgs/: local_setup.sh  package.sh
firmware/mcu_ws/install/share/example_interfaces/: package.sh
firmware/mcu_ws/install/share/geometry_msgs/: local_setup.sh  package.sh
firmware/mcu_ws/install/share/libyaml_vendor/: local_setup.dsv  local_setup.sh  package.sh
firmware/mcu_ws/install/share/lifecycle_msgs/: package.sh
firmware/mcu_ws/log/: latest_build
install/: local_setup.sh  setup.sh
install/micro_ros_setup/share/micro_ros_setup/: local_setup.sh  package.sh
log/: latest_build
(+485 files in other folders)
